--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">WhatsappClone</string>
+    <string name="sample_name">Sample Name</string>
+    <string name="tap_to_chat">Tap to Chat</string>
+    <string name="sample_time">sample Time</string>
 </resources>
